--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,6 +3,13 @@ include "base.conf"
 app {
   env = "dev"
   env = ${?APP_ENV}
+  auth0 {
+    clientSecret = ${AUTH0_CLIENT_SECRET}
+    clientId = ${AUTH0_CLIENT_ID}
+    callbackUrl = "http://localhost:9000/auth/callback"
+    callbackUrl = ${?AUTH0_CALLBACK}
+    domain = ${AUTH0_CLIENT_DOMAIN}
+  }
 }
 
 elasticsearch.service {
