--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,8 +12,24 @@ app {
   }
 }
 
+vision.microsoft.api {
+  endpoint = ${VISION_ENDPOINT}
+  key = ${VISION_KEY}
+}
+
 elasticsearch.service {
   url = ${ES_URL}
   login = ${ES_LOGIN}
   password = ${ES_PASSWORD}
+}
+
+aws {
+  accessKeyId = ${AWS_KEY_ID}
+  secretKey = ${AWS_KEY}
+}
+
+s3 = {
+  bucket = ${S3_BUCKET}
+  region = ${S3_REGION}
+  endPoint = ${S3_ENDPOINT}
 }
